# Athena

./: .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
src/backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_baseline.py  002_feature_history.py  003_strategies.py  004_tags_json.py
src/backend/app/: config.py  main.py
src/backend/app/api/: deps.py
src/backend/app/backtest_engine/: dataset_builder.py  evaluator.py  metrics.py  return_calculator.py  signal_generator.py
src/backend/app/decision_api/: __init__.py  semantic_cache.py  semantic_controller.py  semantic_gateway.py  semantic_serializer.py
src/backend/app/decision_semantics/: __init__.py  confidence_model.py  mapper.py  reducer.py  registry.py  schema.py  validator.py
src/backend/app/decision_transparency/: decision_report_builder.py  decision_trace.py  factor_attribution.py  risk_explainer.py  scenario_simulator.py  signal_explainer.py  user_decision_interface.py
src/backend/app/evolution/: __init__.py  feature_drift_detector.py  portfolio_topology.py  strategy_decay_analyzer.py  strategy_lifecycle_manager.py  system_evolution_report.py
src/backend/app/execution/: execution_engine.py  execution_report.py  liquidity_model.py  order_book_simulator.py  slippage_engine.py  trade_scheduler.py
src/backend/app/execution_live/: __init__.py
src/backend/tests/: conftest.py
(+559 files in other folders)
